--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0"
   }
