--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "test:unit": "vitest"
   },
   "devDependencies": {
+    "@felte/reporter-svelte": "^1.1.11",
     "@playwright/test": "^1.28.1",
     "@skeletonlabs/skeleton": "2.6.1",
     "@skeletonlabs/tw-plugin": "0.3.0",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "0.5.10",
     "@types/node": "20.10.5",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -45,8 +47,13 @@
   },
   "type": "module",
   "dependencies": {
+    "@felte/validator-zod": "^1.0.17",
+    "@floating-ui/dom": "^1.5.3",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@popperjs/core": "^2.11.8",
+    "felte": "^1.2.12",
     "firebase": "^10.7.1",
-    "firebase-admin": "^12.0.0"
+    "firebase-admin": "^12.0.0",
+    "svelte-forms-lib": "^2.0.1"
   }
 }
