--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "postcss": "8.4.32",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
+    "prisma": "^5.7.1",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
-    "sveltekit-superforms": "^1.13.1",
     "tailwindcss": "3.4.0",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
@@ -50,10 +50,12 @@
     "@felte/validator-zod": "^1.0.17",
     "@floating-ui/dom": "^1.5.3",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@lucia-auth/adapter-prisma": "^3.0.2",
     "@popperjs/core": "^2.11.8",
+    "@prisma/client": "5.7.1",
     "felte": "^1.2.12",
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
-    "svelte-forms-lib": "^2.0.1"
+    "lucia": "^2.7.6"
   }
 }
