--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "@lucia-auth/adapter-prisma": "^3.0.2",
     "@popperjs/core": "^2.11.8",
     "@prisma/client": "5.7.1",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "felte": "^1.2.12",
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
