--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "test:unit": "vitest"
   },
   "devDependencies": {
-    "@felte/reporter-svelte": "^1.1.11",
     "@playwright/test": "^1.28.1",
     "@skeletonlabs/skeleton": "2.6.1",
     "@skeletonlabs/tw-plugin": "0.3.0",
@@ -48,9 +47,6 @@
   },
   "type": "module",
   "dependencies": {
-    "@felte/validator-zod": "^1.0.17",
-    "@ffmpeg/core": "^0.10.0",
-    "@ffmpeg/ffmpeg": "^0.10.1",
     "@floating-ui/dom": "^1.5.3",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@lucia-auth/adapter-prisma": "^3.0.2",
@@ -58,19 +54,14 @@
     "@prisma/client": "5.7.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/uuid": "^9.0.7",
-    "@videojs/themes": "^1.0.1",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.0.0",
-    "felte": "^1.2.12",
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
     "formsnap": "^0.4.2",
     "lucia": "^2.7.6",
-    "rxjs": "^7.8.1",
-    "svelte-video-player": "^1.2.5",
     "sveltekit-superforms": "^1.13.1",
     "tailwind-merge": "^2.2.0",
-    "uuid": "^9.0.1",
-    "video.js": "^8.6.1"
+    "uuid": "^9.0.1"
   }
 }
