--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@lucia-auth/adapter-prisma": "^3.0.2",
     "@popperjs/core": "^2.11.8",
     "@prisma/client": "5.7.1",
+    "@tanstack/svelte-table": "^8.11.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/uuid": "^9.0.7",
     "bcryptjs": "^2.4.3",
