--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write .",
     "test:integration": "playwright test",
-    "test:unit": "vitest"
+    "test:unit": "vitest",
+    "postinstall": "prisma generate"
   },
   "devDependencies": {
     "@playwright/test": "^1.28.1",
@@ -50,6 +51,7 @@
     "@floating-ui/dom": "^1.5.3",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@lucia-auth/adapter-prisma": "^3.0.2",
+    "@mux/mux-player": "^2.3.1",
     "@popperjs/core": "^2.11.8",
     "@prisma/client": "5.7.1",
     "@tanstack/svelte-table": "^8.11.2",
