--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "@floating-ui/dom": "^1.5.3",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@lucia-auth/adapter-prisma": "^3.0.2",
-    "@mux/mux-player": "^2.3.1",
     "@popperjs/core": "^2.11.8",
     "@prisma/client": "5.7.1",
     "@tanstack/svelte-table": "^8.11.2",
@@ -63,6 +62,7 @@
     "firebase-admin": "^12.0.0",
     "formsnap": "^0.4.2",
     "lucia": "^2.7.6",
+    "plyr": "^3.7.8",
     "sveltekit-superforms": "^1.13.1",
     "tailwind-merge": "^2.2.0",
     "uuid": "^9.0.1"
