--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "type": "module",
   "dependencies": {
     "@floating-ui/dom": "^1.5.3",
+    "@fontsource-variable/inter": "^5.0.16",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@lucia-auth/adapter-prisma": "^3.0.2",
     "@popperjs/core": "^2.11.8",
