--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@prisma/client": "5.7.1",
     "@tanstack/svelte-table": "^8.11.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/nodemailer": "^6.4.14",
     "@types/uuid": "^9.0.7",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.0.0",
@@ -64,6 +65,7 @@
     "firebase-admin": "^12.0.0",
     "formsnap": "^0.4.2",
     "lucia": "^2.7.6",
+    "nodemailer": "^6.9.8",
     "plyr": "^3.7.8",
     "sveltekit-superforms": "^1.13.1",
     "tailwind-merge": "^2.2.0",
