--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/nodemailer": "^6.4.14",
     "@types/uuid": "^9.0.7",
+    "@vitejs/plugin-basic-ssl": "^1.0.2",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.0.0",
     "firebase": "^10.7.1",
