--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "0.5.10",
-    "@types/node": "20.10.5",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/node": "^20.11.0",
+    "@types/nodemailer": "^6.4.14",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "@zerodevx/svelte-img": "^2.1.0",
     "autoprefixer": "10.4.16",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^9.1.0",
@@ -38,14 +40,12 @@
     "prisma": "^5.7.1",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
-    "svelte-motion": "^0.12.0",
     "tailwindcss": "3.4.0",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^5.0.3",
     "vite-plugin-tailwind-purgecss": "0.2.0",
-    "vitest": "^1.0.0",
-    "zod": "^3.22.4"
+    "vitest": "^1.0.0"
   },
   "type": "module",
   "dependencies": {
@@ -56,9 +56,6 @@
     "@popperjs/core": "^2.11.8",
     "@prisma/client": "5.7.1",
     "@tanstack/svelte-table": "^8.11.2",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/nodemailer": "^6.4.14",
-    "@types/uuid": "^9.0.7",
     "@vitejs/plugin-basic-ssl": "^1.0.2",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.0.0",
@@ -66,13 +63,11 @@
     "firebase-admin": "^12.0.0",
     "formsnap": "^0.4.2",
     "lucia": "^2.7.6",
-    "mode-watcher": "^0.1.2",
     "nodemailer": "^6.9.8",
     "plyr": "^3.7.8",
-    "svelte-french-toast": "^1.2.0",
-    "svelte-sonner": "^0.3.11",
     "sveltekit-superforms": "^1.13.1",
     "tailwind-merge": "^2.2.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   }
 }
