--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prisma": "^5.7.1",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "svoast": "^2.3.0",
     "tailwindcss": "3.4.0",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
@@ -65,6 +66,7 @@
     "lucia": "^2.7.6",
     "nodemailer": "^6.9.8",
     "plyr": "^3.7.8",
+    "svelte-sonner": "^0.3.11",
     "sveltekit-superforms": "^1.13.1",
     "tailwind-merge": "^2.2.0",
     "uuid": "^9.0.1",
